@@ -1,3 +1,7 @@
+--November 23,2009--
+- Reverted 'Recent project list' to showing plasmoid names and fixed
+  so it works. Import plasmoids now works.
+
 --November 21,2009--
 - Added preliminary support for importing plasmoids.
   'Recent project list' now shows project folder names instead of 
